--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,18 @@
  *= require_tree .
  *= require_self
  */
+
+ li {
+  display: inline;
+  background-color: #3498dc;
+  padding: 10px 10px;
+  color: white;
+  margin-right: 20px;
+  font-size: 20px;
+  box-shadow: 10px 5px 5px grey;
+ }
+
+p {
+  margin-top: 40px;
+  margin-bottom: 10px;
+}
